--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Rock Paper Scissors</title>
-    <script src="./RPS.js"></script>
+    <script src="./rps-ui.js" defer></script>
 </head>
 <body>
+    <button id="Rock" class="symbolButton"><img src="./images/rock.png" width="60px"></button>
+    <button id="Paper" class="symbolButton"><img src="./images/paper.png" width="60px"></button>
+    <button id="Scissors" class="symbolButton"><img src="./images/scissors.png" width="60px"></button>
     
 </body>
 </html>
